Fix presentation of image size integers

Changes in 3663c774ca0b766583ee92d9b2776d67cf5d5c2a (bug 473638) caused
image dimensions to be displayed with integer grouping (1,024x1,024)
instead of the more conventional "1024x1024".

BUG: 488639